@@ -1,5 +1,6 @@
 //it's lazy updated file, so the real ChangeLog is the activity on github
 
++ Options - Interface - Show tabs and spaces
 * find in files FIX
 * TEA theme FIX
 
